--- a/data-array-angular/src/app/container/container.component.html
+++ b/data-array-angular/src/app/container/container.component.html
@@ -1,1 +1,5 @@
-<p>container works!</p>
+<ul>
+  <li *ngFor = "let c of macchines">
+    <app-macchina [macchina] = "c"> </app-macchina>
+  </li>
+</ul>
